sass/_forms.scss
/* ... */
//
// radiobutton-field in action
//
@mixin radiobutton-field {
  @include fieldset;
  @include simple-radiobutton;

  label {
    border: ($general-border-width / 3) solid $nypl-light-gray;
    //padding: 1.1875rem 1rem 0 4rem;
  }

  input[type=radio] {
    display: block;
    position: relative;
    top: 1.15rem;
    left: -2.75rem;
  }
} // /radiobutton-field



//
// Generic Checkbox Style
//
@mixin generic-checkbox {

  // If the the checkboxes are in <ul> remove the list stylings
  // TODO: find a better ,more generic mixin argumenty way of doing this...
  > li {
    list-style: none;
    margin: 0 0 0.35rem -1rem;
    padding: 0;
  }

  input[type="checkbox"] {
    opacity: 0;
  }

  label {
    display: inline-block;
    line-height: 1.2;
    position: relative;
    padding-left: 1.75rem;
    width: 60%;

    // @include media($xtrasmall-breakpoint) {
    //   width: 65%;
    // }
  }

  label::after,
  label::before {
    content: "";
    display: inline-block;
    position: absolute;
  }

  label::before {
    border: ($general-border-width * 0.75) solid;
    height: 1rem;
    left: 0;
    width: 1rem;
    top: 0.25rem;
  }

  label::after {
    height: 0.375rem;
    width: 0.5625rem;
    border-left: $general-border-width solid;
    border-bottom: $general-border-width solid;
    -moz-transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
    left: 0.32rem;
    top: 0.5rem;
  }
// Hide the checkmark by default
  input[type="checkbox"] + label::after {
    content: none;
  }

  input[type="checkbox"]:checked + label::before {
    background-color: lighten($nypl-green-tint, 35%);
    border-width: $general-border-width;
  }

  input[type="checkbox"]:checked + label,
  input[type="checkbox"]:checked + label::before {
    border-color: $nypl-green-bright;
    color: $nypl-green-bright;
  }

  input[type="checkbox"]:checked + label::after {
    border-color: $nypl-green-bright;
    color: $nypl-green-bright;
    content: "";
  }
// Adding focus styles on the outer-box of the fake checkbox
  input[type="checkbox"]:focus + label::before {
    outline: $nypl-orange auto 0.125rem;
  }
} // /generic-checkbox


@mixin terms-checkbox {
  border-left: 0.5rem solid $nypl-gray;
  margin-bottom: 1rem;
  padding-left: 0.5rem;

  label {
    font-weight: 400;
    padding: 0.1875rem 0;
  }

  input[type=checkbox] {
    height: initial;
    margin: 0 0.25rem 0 0;
  }

  &.checked {
    border-left-color: $nypl-green;
  }
} // /terms-checkbox

@mixin facet-toggle {
  background-color: $nypl-search-color-dark;
  border: 0;
  border-radius: 0;
  color: $page-background-color;
  cursor: pointer;
  display: block;
  font-weight: bold;
  position: relative;
  padding-bottom: 0.25rem;
  padding-left: $form-padding;
  padding-right: 1.5rem;
  padding-top: 0.25rem;
  text-align: left;
  width: 100%;

  h3 {
    font-size: inherit;
    margin: 0;
    padding: 0;
    pointer-events: none;
  }

  .nypl-icon {
    @include nypl-icon(
      $fill: $page-background-color,
      $background-color: $nypl-search-color-dark);
    @include transition(all, $hover-time, ease-in);
    position: absolute;
    right: 0.5rem;
    top: 0.65rem;
    transform: rotate(180deg);
  }
} // /facet-toggle

@mixin collapsible-field($is-searchable: false) {
  @include fieldset;
  padding-bottom: $form-padding;

  @if ($is-searchable == false) {
    .nypl-collapsible {
      background-color: $nypl-white;
      padding-left: $form-padding;
      padding-right: $form-padding;
    }
  }

  &.collapsed {
    .nypl-facet-toggle .nypl-icon {
      transform: rotate(0deg);
    }
  }
}

@mixin searchable-field {
  @include collapsible-field($is-searchable: true);
  @include simple-radiobutton;

  .nypl-facet-search {
    @include text-field-with-label;
    position: relative;

    label {
      font-weight: normal;
    }
  }

  .nypl-facet-list {
    width: 100%;

    label {
      @include clearfix;
      border-radius: 0;
      display: block;
      font-size: 0.85rem;
      margin-top: 0.2rem;
    }

    input[type="radio"],
    input[type="checkbox"] {
      box-sizing: border-box;
      display: inline-block;
    }

    .nypl-facet-count {
      color: $nypl-gray;
      display: inline-block;
      float: right;
      margin: 0 0.25rem 0 1rem;
      text-align: right;
    }
  }

  .nypl-link-button {
    margin: $form-padding $form-padding 0;
  }

  &.nosearch {
    // when there are too few items to make search worthwhile

    .nypl-facet-search {
      display: none;
    }

  }
}

@mixin alphabetical-filter {
  @include fieldset;

  button {
    @include basic-button(
      $background-color: $nypl-search-color-light,
      $text-color:$page-color,
      $border-width: 0);
    display: inline-block;
    font-weight: normal;
    margin: 0 0 0.5rem 0.5rem;
    padding: 0.2rem 0.25rem;
    width: 2rem;

    &.nypl-long {
      // because “any” has different lengths in different langs
      min-width: 4.75rem;
    }
  }
}

@mixin mobile-refine {
  display: none;

  @include media($mobile-breakpoint) {
    display: block;

    &.hidden {
      display: none;
    }
  }
}



//
// Left hand Search field.
//
@mixin search-form() {
  // used for left-column searches
  margin: 0 0 1rem;

  @include media($mobile-breakpoint) {
    display: none;

    &.active {
      display: block;
    }
  }
}



//
// Basic Text Area
//
@mixin text-area(
  $border-color: $nypl-dark-gray,
  $border-width: ($general-border-width / 3),
  $width: 100%,
  $height: 12rem) {
  border: $border-width solid $border-color;
  height: $height;
  width: $width;
}



//
// Request form(s)
// Mixins for Discovery requests pages
//
@mixin request-item-summary {
  background: $nypl-white;

  h2 {
    font-weight: 400;
  }

  .call-number {
    margin: $general-padding 0;
    font-size: 1rem;
    font-weight: 400;

  } // /.call-number-heading
} // /request-item-summary
/* ... */

